Current :
OK - add: the HTML generator generates the code of the module if available
OK - add: field m_code for modules, to keep the code of top modules
OK - fix: display "include Foo" instead of "include module Foo" in Latex, Man, Texi
OK - fix: not display comments associated to include directives
OK - fix: bad display of type parameters for class and class types
- need to fix display of type parameters for inherited classes/class types


======

Release 3.05 :
 - added link tags in html header to reference sections and subsections
   in each page (for browser which handle those tags)
 - no titles nor lists in first sentence of text in indexes and latex titles
 - only one table for the titles in HTML output
 - fix of bad comment association for types in .ml files
 - dumps now contain a magic number, checked when dumps are loaded
 - new option -o to use with texi, latex and dot generators
 - new .code CSS class used
 - better output for classes and modules, with their type
 - added texinfo generator, by Olivier Andrieu
 - removed iso generator, which became the odoc_check custom generator
 - link syntax {{:url}text} added to the manual
 - (** comments in code is colorized in ocaml code html pages
 - new class .code in style
 - new generator : -dot . Output dot code to display
   modules or types dependencies.
 - new option -inv-merge-ml-mli to inverse the priority of
   .ml and .mli when merging
 - option -werr becomes -warn-error
 - possibility to define and reference section labels
   Exemple:
    (** {2:mysectionlabel My title bla bla bla} *)
   in module Foo

   This section is referenced with {!Foo.mysectionlabel} in
   a comment.

Pre-release 4 :
 - new option -werr to treat ocamldoc warnings as errors
 - new option -hide to remove some modules from complete names,
   (e.g., print ref instead of Pervasives.ref)
 - HTML doc in classic style only contain indexes to existing element kinds
   (i.e. there is no class index if the doc does not contain any class.)